# ProjectAnchorPoint

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/materials/: bricks.mtrl  red.mtl
include/: common.h
include/core/: config.h  gameEngine.h  logger.h
include/game/: CollisionManager.h  InputManager.h  SceneManager.h  ScriptBehaviour.h  ScriptExport.h
include/game/components/: cameracomponent.h  component.h  lightcomponent.h  meshrenderer.h  scriptcomponent.h  transform.h
include/game/components/colliders/: aacollider.h  collidercomponent.h
include/graphics/: camera.h  graphics.h  light.h  mesh.h  scene.h  shader.h
include/window/: cursor.h  window.h
scenes/: first.scene
scripts/: GameScripts.sln
scripts/GameScripts/: Game.cs  GameScripts.cs  InputManager.cs  Transform.cs
scripts/GameScripts/CustomScripts/: CustomScripts.cs  PlayerController.cs  RotateCube.cs
shaders/: DebugPS.hlsl  PS.hlsl  VS.hlsl
src/: main.cpp
src/core/: config.cpp  gameEngine.cpp  logger.cpp
src/game/: CollisionManager.cpp  InputManager.cpp  SceneManager.cpp  ScriptBehaviour.cpp  ScriptExport.cpp
src/game/components/: cameracomponent.cpp  lightcomponent.cpp  meshrenderer.cpp  scriptcomponent.cpp  transform.cpp
src/game/components/colliders/: aacollider.cpp  collidercomponent.cpp
src/graphics/: camera.cpp  graphics.cpp  light.cpp  mesh.cpp  scene.cpp  shader.cpp
src/window/: cursor.cpp  window.cpp
